[package]
name = "fitsio"
version = "0.1.1"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "Rust implmentation of astronomy fits file handling"
homepage = "https://github.com/mindriot101/rust-cfitsio"
repository = "https://github.com/mindriot101/rust-cfitsio"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
libc = "0.2.11"

[dev-dependencies]
tempdir = "0.3.4"
