[package]
name = "fitsio-derive"
edition = "2018"
version = "0.2.1"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "Custom derive macros for the fitsio crate"
homepage = "https://github.com/simonrw/rust-fitsio"
repository = "https://github.com/simonrw/rust-fitsio"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fitsio-derive"
categories = ["external-ffi-bindings", "science"]

[dependencies]
quote = "1.0.0"
syn = { version = "1.0.0", features = ["extra-traits"] }

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
