[package]
name = "fitsio-sys-bindgen"
version = "0.0.2"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "FFI wrapper around cfitsio"
homepage = "https://github.com/mindriot101/rust-fitsio"
repository = "https://github.com/mindriot101/rust-fitsio"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"
documentation = "https://docs.rs/fitsio-sys-bindgen"
categories = ["external-ffi-bindings", "science"]

[dependencies]
libc = "0"
block = "0"

[dev-dependencies]
tempdir = "0"

[build-dependencies]
pkg-config = "0"
bindgen = "0.53"
