[package]
name = "fitsio-sys"
version = "0.5.3"
edition = "2018"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "FFI wrapper around cfitsio"
homepage = "https://github.com/simonrw/rust-fitsio"
repository = "https://github.com/simonrw/rust-fitsio"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"
documentation = "https://docs.rs/fitsio-sys"
categories = ["external-ffi-bindings", "science"]
links = "cfitsio"

[dependencies]

[features]
fitsio-src = []
with-bindgen = ["bindgen"]

[build-dependencies]
pkg-config = "0.3.16"
autotools = ">= 0.2.5"
bindgen = { version = "0.69", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
