[package]
name = "fitsio-sys"
version = "0.5.6"
edition = "2018"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "FFI wrapper around cfitsio"
homepage = "https://github.com/simonrw/rust-fitsio"
repository = "https://github.com/simonrw/rust-fitsio"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"
documentation = "https://docs.rs/fitsio-sys"
categories = ["external-ffi-bindings", "science"]
links = "cfitsio"

[dependencies]

[features]
# Build, statically link, and use the vendored copy
# of CFITSIO in the source tree, rather than the system version.
fitsio-src = ["autotools"]
# If the fitsio-src feature is enabled,
# use CMake rather than Autotools to build CFITSIO.
src-cmake = ["cmake"]
# Generate the FFI bindings using bindgen
# rather than use the manually-written bindings.
# Untested; use at one's peril.
with-bindgen = ["bindgen"]

[build-dependencies]
pkg-config = "0.3.16"
autotools = { version = ">= 0.2.5", optional = true }
bindgen = { version = "0.72", optional = true }
cmake = { version = "0.1", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
