[package]
name = "fitsio"
version = "0.15.0"
edition = "2018"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "Rust implmentation of astronomy fits file handling"
homepage = "https://github.com/mindriot101/rust-fitsio"
repository = "https://github.com/mindriot101/rust-fitsio"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fitsio"
categories = ["external-ffi-bindings", "science"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["array"]

[dependencies]
libc = "0"
fitsio-sys = { version = "0", path = "../fitsio-sys", optional = true}
fitsio-sys-bindgen = { version = "0", path = "../fitsio-sys-bindgen", optional = true }
clippy = { version = "0", optional = true }
ndarray = { version = "0", optional = true }

[dev-dependencies]
tempdir = "0.3.4"
fitsio-derive = { version = "0.1.0", path = "../fitsio-derive" }
version-sync = "0.9.0"
criterion = "0.3.0"

[features]
default = ["fitsio-sys"]
bindgen = ["fitsio-sys-bindgen"]
array = ["ndarray"]

[[bench]]
name = "benchmarks"
harness = false
