[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
categories = ["external-ffi-bindings", "science"]
description = "Rust implmentation of astronomy fits file handling"
documentation = "https://docs.rs/fitsio"
edition = "2018"
homepage = "https://github.com/simonrw/rust-fitsio"
license = "MIT/Apache-2.0"
name = "fitsio"
readme = "README.md"
repository = "https://github.com/simonrw/rust-fitsio"
version = "0.21.1"
rust-version = "1.57.0"

[package.metadata.docs.rs]
features = ["array"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
fitsio-sys = { version = "0.5.0", path = "../fitsio-sys" }
libc = "0.2.44"
ndarray = { version = "0.15.0", optional = true }

[dev-dependencies]
criterion = "0.3.5"
fitsio-derive = { version = "0.2.0", path = "../fitsio-derive" }
tempfile = "3.0.0"
version-sync = "0.9.0"

[features]
array = ["ndarray"]
bindgen = ["fitsio-sys/bindgen"]
fitsio-src = ["fitsio-sys/fitsio-src"]

[[bench]]
harness = false
name = "benchmarks"
