[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
categories = ["external-ffi-bindings", "science"]
description = "Rust implmentation of astronomy fits file handling"
documentation = "https://docs.rs/fitsio"
edition = "2018"
homepage = "https://github.com/simonrw/rust-fitsio"
license = "MIT/Apache-2.0"
name = "fitsio"
readme = "README.md"
repository = "https://github.com/simonrw/rust-fitsio"
version = "0.21.3"
rust-version = "1.58.0"

[package.metadata.release]
pre-release-replacements = [
    {file="../README.md", search="fitsio = .*", replace="{{crate_name}} = \"{{version}}\""},
    {file="src/lib.rs", search="https://docs.rs/fitsio/.*", replace="https://docs.rs/fitsio/{{version}}\")]"},
]

[package.metadata.docs.rs]
features = ["array"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
fitsio-sys = { version = "0.5", path = "../fitsio-sys" }
libc = "0.2.44"
ndarray = { version = "0.15.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
fitsio-derive = { version = "0.2", path = "../fitsio-derive" }
tempfile = "3.0.0"
version-sync = "0.9.0"
# transient dependency for ciborium
serde = "1.0.178"

[features]
array = ["ndarray"]
bindgen = ["fitsio-sys/with-bindgen"]
fitsio-src = ["fitsio-sys/fitsio-src"]
clippy = []

[[bench]]
harness = false
name = "benchmarks"
