[package]
name = "fitsiobenchmark"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitsio = "0.14.1"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "rustversion"
path = "src/main.rs"
